# cookbooks

./: .gitignore  LICENSE  README.md
python/langgraph/agents/: README.md
python/langgraph/agents/agentic-RAG/: README.md  agent.py  app.py  langgraph.json  requirements.txt  tools.py
python/langgraph/agents/arxiv-researcher/: .env.example  .gitignore  README.md  agent.py  langgraph.json  requirements.txt  shared.py  tools.py  utils.py
python/langgraph/agents/basic-RAG/: .gitignore  README.md  agent.py  requirements.txt  utils.py
python/langgraph/agents/ecommerce-hierarchical-system/: .env.example  .gitignore  README.md  langgraph.json  main_agent.py  models.py  prompts.py  pyproject.toml  test_agent.ipynb
python/langgraph/agents/ecommerce-hierarchical-system/.langgraph_api/: .langgraph_ops.pckl
python/langgraph/agents/ecommerce-hierarchical-system/billing_and_payments/: pricing_verification_agent.py  prompts.py  refund_processing_agent.py  supervisor.py  tools.py  transaction_lookup_agent.py
python/langgraph/agents/ecommerce-hierarchical-system/order_management/: fulfillment_agent.py  order_status_agent.py  prompts.py  shipping_tracker_agent.py  supervisor.py  tools.py
python/langgraph/agents/ecommerce-hierarchical-system/promotions_and_loyalty/: loyalty_points_agent.py  promo_code_validator_agent.py  prompts.py  retroactive_discount_agent.py  supervisor.py  tools.py
python/langgraph/my_agent/: README.md  agent.py  langgraph.json
python/langgraph/my_agent/.langgraph_api/: .langgraph_ops.pckl
python/langgraph/persistence/fault-tolerance/: .env.example  (+1 more)
(+21 files in other folders)
