[project]
name = "langgraph-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.6.0",
    "langchain>=1.0.0a9",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "langgraph-cli[inmem]>=0.4.2",
    "langsmith>=0.4.32",
    "notebook>=7.4.7",
    "openai>=2.1.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
